@@ -1,4 +1,6 @@
 master
+- mayhem
+  prevent regexp errors with the filter
 
 2.32.3
 - mayhem
